# youtube-transcriber

./: .env.example  .gitignore  .nixpacks  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMANDOS_GITHUB.txt  CONTRIBUTING.md  CONTRIBUTORS.md  DEPLOY_NOW.sh  DOCUMENTATION.md  Dockerfile  GITHUB_SETUP.md  GIT_STATUS.md  INDEX.md  INDICE_ARCHIVOS_GITHUB.md  LICENSE  ORGANIZATION.md  Procfile  Project_Transcriber_youtube.md  QUICKSTART.md  QUICK_START.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_QUICK_START.md  RAILWAY_VARIABLES.txt  README.md  READY_FOR_GITHUB.md  RESUMEN_FINAL.md  SECURITY.md  SECURITY_HONEST_ANALYSIS.md  SECURITY_UI_IMPROVEMENTS.md  START.bat  YOUTUBE_BOT_DETECTION.md  app_gradio.py  app_gradio_secure.py  app_gradio_secure_backup.py  check_before_push.py  config.py  deploy_helper.sh  (+13 more)
.github/: README.md  pull_request_template.md
docs/: API.md  ARCHITECTURE.md  BUILD_REPORT.md  DEPLOYMENT.md  DUPLICATE_DETECTION.md  FINAL_SUMMARY.md  INSTALL_WINDOWS.md  MANAGEMENT.md  PROJECT_SUMMARY.md  RAG_GUIDE.md  RATE_LIMITS.md  README.md  SECURITY_SETUP.md  START_HERE.md  USAGE.md  VERIFICATION.md  WHATS_NEW.md  WORKFLOW.md
examples/: __init__.py  advanced_usage.py  basic_usage.py
scripts/: __init__.py  find_ffmpeg.py  run_tests.sh  setup.bat  setup.sh
src/: __init__.py  logger.py  rag_engine.py  security.py  transcriber.py  utils.py
tests/: __init__.py  conftest.py  quick_test.py  test_config.py  test_config_validation.py  test_duplicates.py  test_logging_integration.py  test_path_traversal.py  test_rag.py  test_rag_engine.py  (+5 more)
(+6 files in other folders)
